# goit-pyweb-hw-05

./: data.json  main.py  pyproject.toml
